# clawcode

./: .clippy.toml  .gitignore  .gitmessage  .tombi.toml  .typos.toml  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  README_zh.md  THIRD_PARTY_NOTICES.md  base.toml  claw.toml  rustfmt.toml
crates/acp/: Cargo.toml
crates/acp/examples/: simple_client.rs
crates/acp/src/: agent.rs  client.rs  lib.rs  log.rs  main.rs  message.rs  permission.rs
crates/acp/src/backend/: fs.rs  terminal.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-cli/tests/: usage.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  runtime.rs
crates/cli/tests/: usage.rs
crates/config/: Cargo.toml
crates/config/src/: agent.rs  config.rs  hook.rs  lib.rs  llm.rs  loader.rs  mcp.rs  multi_agent.rs  skills.rs  tui.rs
crates/config/tests/: loading.rs
crates/hook/: Cargo.toml
crates/hook/src/: lib.rs
crates/hook/src/engine/: command_runner.rs  discovery.rs  dispatcher.rs  mod.rs  output_parser.rs
crates/hook/src/events/: common.rs  mod.rs  post_tool_use.rs  pre_tool_use.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: approval.rs  compaction.rs  context.rs  error.rs  exec_policy.rs  input.rs  input_queue.rs  lib.rs  prompt.rs  session.rs  thread_manager.rs  tool.rs  tool_events.rs  turn.rs
crates/kernel/src/agent/: adapter.rs  control.rs  mailbox.rs  mod.rs  registry.rs  role.rs
crates/kernel/src/approval/: mod.rs  store.rs
crates/kernel/src/command/: mod.rs  prompt_args.rs  slash_command.rs
crates/kernel/src/context/: history.rs  item.rs  mod.rs  session.rs  turn.rs
crates/kernel/src/events/: mod.rs
crates/kernel/src/model/: mod.rs
crates/kernel/src/persistence/: manifest.rs  mod.rs  record.rs  recorder.rs  replay.rs  store.rs
crates/kernel/src/prompt/: environment.rs  instruction.rs  mod.rs
crates/kernel/src/prompts/: explorer.txt  worker.txt
crates/kernel/src/runtime/: agent_loop.rs  inflight.rs  mod.rs  runner.rs  sampling.rs
crates/kernel/src/runtime/collaboration/: mailbox.rs  mod.rs  supervisor.rs  work_queue.rs  worker.rs
crates/kernel/src/runtime/continuation/: config.rs  decider.rs  hook.rs  mod.rs
crates/kernel/src/runtime/inflight/: mod.rs  queue.rs  registry.rs  snapshot.rs
crates/kernel/src/runtime/sampling/: collector.rs  mod.rs  publisher.rs
crates/kernel/src/runtime/task/: api.rs  mod.rs  runner.rs
crates/kernel/src/runtime/tool/: batching.rs  mod.rs  plan.rs  publisher.rs  runtime.rs
crates/kernel/src/runtime/tool_runtime/: mod.rs
crates/kernel/src/runtime/turn/: loop.rs  mod.rs  result.rs  runner.rs
crates/kernel/src/session/: mod.rs
crates/kernel/src/tools/: builtin.rs  executor.rs  mod.rs  registry.rs
crates/kernel/tests/: agent_loop.rs  collaboration.rs  context_manager.rs  context_resume.rs  model_adapter.rs  session_persistence.rs  session_store.rs  tool_executor.rs  tool_registry.rs
crates/llm/: Cargo.toml
crates/llm/examples/: chatgpt_completion.rs  chatgpt_stream.rs  chatgpt_websocket.rs  completion.rs  deepseek_completion.rs  deepseek_stream.rs  llm_provider_completion.rs  response.rs  response_stream.rs  stream.rs
crates/llm/examples/common/: mod.rs
crates/llm/src/: lib.rs  one_or_many.rs  streaming.rs  usage.rs  wasm_compat.rs
crates/llm/src/client/: completion.rs  mod.rs  verify.rs
crates/llm/src/completion/: message.rs  request.rs
crates/llm/src/http_client/: mod.rs  sse.rs
crates/llm/src/providers/: mod.rs
crates/llm/src/providers/chatgpt/: auth.rs  mod.rs  ws.rs
crates/llm/src/providers/deepseek/: client.rs  (+1 more)
crates/llm/src/telemetry/: mod.rs
crates/llm/src/tool/: mod.rs
crates/llm/tests/: llm_provider.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  client.rs  error.rs  lib.rs  manager.rs  tool.rs  transport.rs
crates/mcp/tests/: integration_test.rs
crates/mcp/tests/fixtures/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: acp_conv.rs  agent.rs  agent_ui.rs  approvals.rs  config.rs  event.rs  hook.rs  item.rs  kernel.rs  lib.rs  mcp.rs  message.rs  one_or_many.rs  op.rs  permission.rs  plan.rs  session.rs  tool.rs  usage.rs
crates/provider/: Cargo.toml
crates/provider/examples/: deepseek.rs  deepseek_stream.rs  factory_say_hi.rs  factory_say_hi_stream.rs
crates/provider/src/: json_utils.rs  lib.rs  one_or_many.rs  prelude.rs  streaming.rs  wasm_compat.rs
crates/provider/src/client/: completion.rs  mod.rs  model_listing.rs  verify.rs
crates/provider/src/completion/: message.rs  mod.rs  request.rs
crates/provider/src/factory/: event.rs  mod.rs
crates/provider/src/http_client/: mod.rs  multipart.rs  retry.rs  sse.rs
crates/provider/src/model/: listing.rs
crates/provider/src/providers/: deepseek.rs  minimax.rs  mod.rs  moonshot.rs  xiaomimimo.rs
crates/provider/src/telemetry/: mod.rs
crates/skills/: Cargo.toml
crates/skills/src/: error.rs  injection.rs  lib.rs  loader.rs  mentions.rs  model.rs  render.rs  rules.rs
crates/skills/tests/: skills.rs
crates/store/: Cargo.toml
crates/store/src/: agent_graph.rs  error.rs  event.rs  file_store.rs  lib.rs  manifest.rs  reader.rs  record.rs  recorder.rs  replay.rs  traits.rs  writer.rs
crates/tools/: Cargo.toml
crates/tools/src/: collaboration.rs  context.rs  create.rs  error.rs  handler.rs  invocation.rs  lib.rs  mcp.rs  output.rs  plan.rs  registry.rs  router.rs  spec.rs
crates/tools/src/backend/: fs.rs  terminal.rs
crates/tools/src/builtin/: agents.rs  apply_patch.rs  collaboration.rs  file.rs  mod.rs  read_text_file.rs  shell.rs  skill.rs  write_text_file.rs
crates/tools/tests/: builder.rs  collaboration.rs  create.rs
crates/tui/: Cargo.toml
crates/tui/src/: acp_client.rs  acp_server.rs  app.rs  event.rs  lib.rs  main.rs  terminal.rs
crates/tui/src/acp/: client.rs  mod.rs
crates/tui/src/ui/: agent_navigation.rs  agent_picker.rs  approval.rs  composer.rs  layout.rs  mod.rs  render.rs  session_router.rs  state.rs  status.rs  terminal_output.rs  theme.rs  tool_render.rs  tool_summary.rs  transcript.rs  view.rs
(+153 files in other folders)
