[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# Already present
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls-native-certs"] }
thiserror = "2"
tracing = "0.1"

# New
arc-swap = "1.7"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
dirs = "5"
eventsource-stream = "0.2"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Test-only
wiremock = "0.6"
