[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
# error
anyhow = "1"
thiserror = "2"

# tracing & log
tracing = "0.1"
tracing-futures = "0.2.5"
serenity = "0.12.4"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.19"

# async
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-test = "0.4.4"
pin-project-lite = "0.2.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.23.1", default-features = false }

# muitl thread
rayon = "1.10.0"

# http
bytes = "1"
http = "1"
url = "2.5"
hyper-util = "0.1.14"
reqwest-retry = "0.9"
eventsource-stream = "0.2"
reqwest = { version = "0.13", default-features = false }
reqwest-middleware = { version = "0.5.1", default-features = false }

# serde
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = "1.0.4"
quick-xml = "0.39.2"
serde_path_to_error = "0.1.17"
figment = { version = "0.10", features = ["toml", "env"] }

# wasm
wasm-bindgen-futures = "0.4.54"

# misc
toml = "0.8"
arc-swap = "1.7"
wiremock = "0.6"
dirs = "5"
base64 = "0.22"
epub = "2.1.4"
fastrand = "2.3.0"
futures-timer = "3.0.3"
getrandom = "0.2"
glob = "0.3.2"
lopdf = "0.36.0"
mime = "0.3.17"
mime_guess = "2.0.5"
nanoid = "0.4"
ordered-float = "5.0.0"
rmcp = "1.6.0"
assert_fs = "1.1.3"
axum = "0.8.4"
redis = "1.2.1"
