[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "deny"
unused_import_braces = "deny"
elided_lifetimes_in_paths = "deny"

[workspace.lints.clippy]
# Panic prevention
string_slice = "warn"
indexing_slicing = "warn"

unwrap_used = "warn"
panic = "warn"
get_unwrap = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Silent failure prevention
let_underscore_future = "warn"
let_underscore_must_use = "allow"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Async/concurrency safety
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"

# Numeric safety
float_cmp = "warn"
float_cmp_const = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

# Unsafe code safety
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
mem_forget = "warn"

[workspace.dependencies]
# error
anyhow = "1"
thiserror = "2"

# tracing & log
tracing = "0.1"
tracing-futures = "0.2.5"
serenity = "0.12.4"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.19"

# async
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
tokio-test = "0.4.4"
pin-project-lite = "0.2.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.23.1", default-features = false }

# muitl thread
rayon = "1.10.0"

# http
bytes = "1"
http = "1"
url = "2.5"
hyper-util = "0.1.14"
reqwest-retry = "0.9"
eventsource-stream = "0.2"
reqwest = { version = "0.13", default-features = false }
reqwest-middleware = { version = "0.5.1", default-features = false }

# serde
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = "1.0.4"
quick-xml = "0.39.2"
serde_path_to_error = "0.1.17"
figment = { version = "0.10", features = ["toml", "env"] }

# builder
typed-builder = "0.21"

# wasm
wasm-bindgen-futures = "0.4.54"

# date & time
chrono = { version = "0.4", default-features = false }

# fs
toml = "0.8"
mime = "0.3.17"
mime_guess = "2.0.5"
assert_fs = "1.1.3"
tempfile = "3"

# protocol
agent-client-protocol = "0.11.1"

# cli
clap = { version = "4", features = ["derive"] }

# tui
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"

# misc
arc-swap = "1.7"
wiremock = "0.6"
dirs = "5"
base64 = "0.22"
rand = "0.9"
fastrand = "2.3.0"
futures-timer = "3.0.3"
getrandom = "0.2"
nanoid = "0.4"
ordered-float = "5.0.0"
rmcp = "1.6.0"
uuid = { version = "1", features = ["v4", "serde"] }
strum = { version = "0.27", features = ["derive"] }
