[package]
name = "acp"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel" }
skills = { path = "../skills" }
tools = { path = "../tools" }

agent-client-protocol = { workspace = true }
agent-client-protocol-schema = { workspace = true }

async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["io-std", "macros", "rt", "sync"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }

[dev-dependencies]
llm = { path = "../llm" }
tempfile = { workspace = true }
