[package]
name = "agent-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = { workspace = true }
llm = { path = "../llm" }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
