[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel" }
tools = { path = "../tools" }
llm = { path = "../llm" }

async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
futures-util = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
arc-swap = { workspace = true }

snafu = { workspace = true }
