[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
acp = { path = "../acp" }
kernel = { path = "../kernel" }
tools = { path = "../tools" }
llm = { path = "../llm" }
skills = { path = "../skills" }

tokio = { workspace = true, features = ["macros", "rt", "sync"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
figment = { workspace = true }
arc-swap = { workspace = true }
