[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
acp = { path = "../acp" }
kernel = { path = "../kernel" }
store = { path = "../store" }
tools = { path = "../tools" }
llm = { path = "../llm" }
skills = { path = "../skills" }

chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
