[package]
name = "config"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }

arc-swap = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tempfile = "3"
toml = "0.8"
