[package]
name = "mcp"
edition.workspace = true
version.workspace = true
description = "MCP client — server connection management, tool discovery, and tool calls"

[dependencies]
tokio = { workspace = true, features = ["process", "time", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmcp = { workspace = true, features = ["client", "auth", "transport-child-process", "transport-streamable-http-client-reqwest"] }
async-trait = { workspace = true }
oauth2 = "5"
thiserror = { workspace = true }
protocol = { path = "../protocol" }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true }
dirs = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
