[package]
name = "protocol"
edition.workspace = true
version.workspace = true
description = "Internal protocol types for clawcode agent-core / frontend communication"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
agent-client-protocol = { workspace = true }
