[package]
name = "skills"
version = "0.1.0"
edition = "2024"

[dependencies]
llm = { path = "../llm" }

snafu = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
