[package]
name = "store"
edition.workspace = true
version.workspace = true
description = "Session persistence abstraction — trait-based store for session lifecycle"

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }

tokio = { workspace = true, features = ["rt", "sync"] }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
