[package]
name = "tools"
edition.workspace = true
version.workspace = true
description = "Built-in agent tools: shell execution, file I/O, MCP stub"

[lints]
workspace = true

[dependencies]
protocol = { path = "../protocol" }
skills = { path = "../skills" }
mcp = { path = "../mcp" }

async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
nix = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "time", "sync"] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tempfile = "3"
